<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.abedfattal.rexapixakt.R" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"
        >

        <ImageView
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_welcome_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="41.0dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="#fff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_in_or_create_account"
                android:textColor="#D8D8D8"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/welcome_login"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClickNavigateTo="@{R.id.action_welcomeFragment_to_loginFragment}"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="@color/black" />

            <Space
                android:layout_width="5dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/create_account_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/create"
                android:onClickNavigateTo="@{R.id.action_welcomeFragment_to_registerFragment}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
</layout>