<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.abedfattal.rexapixakt.R" />

        <variable
            name="vm"
            type="com.abedfattal.rexapixakt.ui.newuser.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.newuser.register.RegisterFragment">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:onClick="@{()->vm.pop()}"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="@+id/emailContainer"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:isVisible="@{vm.isSubmittingForm}"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackThickness="@dimen/progressBarThickness" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/RexaPexa.Field.Required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_padding"
            android:setErrorText="@{vm.emailTextField.errorMessage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:setTextWatcher="@{vm.emailTextField.field}"
                android:text="@{vm.emailTextField.field}" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/RexaPexa.Field.Required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_padding"
            android:layout_marginTop="@dimen/field_spaces"
            android:setErrorText="@{vm.passwordTextField.errorMessage}"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:setTextWatcher="@{vm.passwordTextField.field}"
                android:text="@{vm.passwordTextField.field}" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageContainer"
            style="@style/RexaPexa.Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_padding"
            android:layout_marginTop="@dimen/field_spaces"
            android:setErrorText="@{vm.ageTextField.errorMessage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/age"
                android:inputType="number"
                android:lines="1"
                android:setTextWatcher="@{vm.ageTextField.field}"
                android:text="@{vm.ageTextField.field}" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:minHeight="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_spaces"
            android:enabled="@{vm.canSubmitForm}"
            android:onClick="@{()->vm.submit()}"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/passwordContainer"
            app:layout_constraintStart_toStartOf="@+id/ageContainer"
            app:layout_constraintTop_toBottomOf="@+id/ageContainer" />


        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/submitButton"
            app:layout_constraintStart_toStartOf="@+id/submitButton"
            app:layout_constraintTop_toBottomOf="@+id/submitButton">
            <TextView
                android:id="@+id/text"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClickNavigateTo="@{R.id.action_registerFragment_to_loginFragment}"
                android:text="@string/login"
                android:textColor="@color/color_primary" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>