<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.abedfattal.rexapixakt.R" />

        <variable
            name="vm"
            type="com.abedfattal.rexapixakt.ui.newuser.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newuser.login.LoginFragment">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:isVisible="@{vm.isSubmittingForm}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackThickness="@dimen/progressBarThickness" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"

            style="@style/RexaPexa.Field.Required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_padding"
            android:setErrorText="@{vm.emailTextField.errorMessage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:setTextWatcher="@{vm.emailTextField.field}"
                android:text="@{vm.emailTextField.field}" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/RexaPexa.Field.Required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_padding"
            android:layout_marginTop="@dimen/field_spaces"
            android:setErrorText="@{vm.passwordTextField.errorMessage}"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailContainer"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:setTextWatcher="@{vm.passwordTextField.field}"
                android:text="@{vm.passwordTextField.field}" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:minHeight="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_spaces"
            android:enabled="@{vm.canSubmitForm}"
            android:onClick="@{()->vm.submit()}"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/passwordContainer"
            app:layout_constraintStart_toStartOf="@+id/passwordContainer"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />


        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/submitButton"
            app:layout_constraintStart_toStartOf="@+id/submitButton"
            app:layout_constraintTop_toBottomOf="@+id/submitButton">
            <TextView
                android:id="@+id/text"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClickNavigateTo="@{R.id.action_loginFragment_to_registerFragment}"
                android:text="@string/register"
                android:textColor="@color/color_primary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>